base-react/src/App.css
.App {
    text-align: center;
    overflow: hidden;
}

.App-logo {
    height: 40vmin;
    pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
    .App-logo {
        animation: App-logo-spin infinite 20s linear;
    }
}

.App-header {
    background-color: #282c34;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: calc(10px + 2vmin);
    color: white;
}

.App-link {
    color: #61dafb;
}

@keyframes App-logo-spin {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

.container {
    width: 100%;
    margin-right: auto;
    margin-left: auto;
    max-width: 256rem;
}

.to-color {
    filter: grayscale(100%);
    -webkit-filter: grayscale(100%);
}

.to-color:hover {
    transition: all 1s;
    filter: none;
    -webkit-filter: grayscale(0);
}


/* Parallax Styles */

.parallax {
    perspective: 1px;
    height: 100vh;
    overflow-x: hidden;
    overflow-y: auto;
}

.object-wrapper {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: none;
    justify-content: center;
}

.speed-0 {
    transform: translateZ(1px) scale(0);
}

.speed-1 {
    transform: translateZ(-1px) scale(2);
}

.speed-2 {
    transform: translateZ(-2px) scale(3);
}

.speed-3 {
    transform: translateZ(-3px) scale(4);
}

.speed-4 {
    transform: translateZ(-4px) scale(5);
}

.speed-5 {
    transform: translateZ(-5px) scale(6);
}

.speed-6 {
    transform: translateZ(-6px) scale(7);
}

.speed-10 {
    transform: translateZ(-10px) scale(11);
}

.speed-20 {
    transform: translateZ(-40px) scale(41);
}

.object {
    height: 100px;
    width: 100%;
}

.object-1 {
    margin-top: 0;
    background: red;
}

.object-2 {
    margin-top: 10rem;
    background: yellow;
}

.object-3 {
    margin-top: 50rem;
}


/* 
.object-4 {
    margin-top: 30rem;
    background: green;
}

.object-5 {
    margin-top: 40rem;
    background: pink;
} */

.object-6 {
    margin-top: 80rem;
    background: purple;
}

.object-4 {
    margin-top: calc(50rem + 50vh);
}

.page-content {
    height: 280vh;
}

